index.html changed

--- a/fgeocoder/geocalc/templates/index.html
+++ b/fgeocoder/geocalc/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<h1>Distance to mkad is </h1>
+<h1>Distance to MKAD is </h1>
 <h1>{{ distance }} km</h1>
 {% endblock %}
